app/assets/stylesheets/components/shared/c-action-bar.scss
.c-action-bar {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 60px;
  background-color: $color-2;
  z-index: 10;

  @media #{$mq-body-width} {
    left: 50%;
    transform: translateX(-50%);
  }

  .c-button + .c-button {
    margin-left: 15px;
  }

  &.-wide {
    @media #{$mq-body-width} {
      left: 0;
      width: 100vw;
      max-width: none;
      padding: 0 calc((100vw - #{$content-width}) / 2);
      transform: none;
    }
  }

  > .wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 100%;
  }

  &.-embed {
    position: static;
    transform: none;

    > .wrapper {
      padding: 0 45px;
    }

    &.-center {
      > .wrapper {
        justify-content: center;
      }
    }
  }
}

